# StormForge

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  PR_DESCRIPTION.md  README.md  SECURITY_SUMMARY.md  SPRINT_M3_COMPLETION_REPORT.md  SPRINT_M3_SUMMARY.md  SPRINT_M5_COMPLETION_REPORT.md  SPRINT_M5_SUMMARY.md  SPRINT_M6_COMPLETION_REPORT.md  SPRINT_M7_COMPLETION_REPORT.md  SPRINT_M7_FINAL_SUMMARY.md  SPRINT_M7_IMPLEMENTATION_SUMMARY_CN.md  SPRINT_M7_KNOWN_ISSUES.md  SPRINT_M7_PROGRESS_REPORT.md  SPRINT_M8_COMPLETION_REPORT.md  SPRINT_M8_SECURITY_SUMMARY.md  SPRINT_M9_DOCUMENTATION_COMPLETE.md  SPRINT_M9_FINAL_COMPLETION_REPORT.md  SPRINT_M9_完成总结_中文.md  TODO.md  TODO.md.backup
docs/: ARCHITECTURE.md  FRONTEND_UI_IMPLEMENTATION_SUMMARY.md  INDEX.md  MODELER_UPGRADE_PLAN.md  MODELER_UPGRADE_SUMMARY.md  ROADMAP.md  SPRINT_M1_UI_GUIDE.md  SPRINT_M1_UI_SUMMARY.md  TODO_UPDATE_SUMMARY.md  sprint_m1_backend_completion.md  sprint_m1_completion.md  sprint_s03_completion.md
examples/: README.md
ir_schema/: README.md
scripts/: pre-commit  seed_standard_library.sh
stormforge_backend/: .env.example  .gitignore  Cargo.toml  QUICKSTART.md  README.md
stormforge_backend/src/: error.rs  lib.rs  main.rs
stormforge_backend/src/db/: mod.rs  mongodb.rs  sqlite.rs
stormforge_backend/src/handlers/: auth.rs  command.rs  connection.rs  entity.rs  library.rs  mod.rs  project.rs  read_model.rs  team_member.rs  user.rs
stormforge_backend/src/middleware/: auth.rs
stormforge_backend/src/models/: command.rs  connection.rs  entity.rs  library.rs  mod.rs  project.rs  read_model.rs  team_member.rs  user.rs
stormforge_backend/src/services/: auth.rs  command.rs  connection.rs  entity.rs  library.rs  mod.rs  project.rs  read_model.rs  team_member.rs  user.rs
stormforge_backend_toolchain/: Cargo.toml  README.md  README_CN.md  run.sh
stormforge_backend_toolchain/src/: backend.rs  main.rs  ui.rs
stormforge_dart_generator/: README.md
stormforge_generator/: Cargo.toml  README.md
stormforge_generator/src/: main.rs
stormforge_generator/src/generators/: api_generator.rs  command_generator.rs  entity_generator.rs  event_generator.rs  mod.rs  rust_generator.rs  utils.rs
stormforge_generator/src/ir/: mod.rs  parser.rs  types.rs
stormforge_generator/tests/: integration_test.rs
stormforge_modeler/: .gitignore  README.md  TROUBLESHOOTING.md  analysis_options.yaml  pubspec.yaml  setup.sh
(+131 files in other folders)
