[package]
name = "stormforge_backend_toolchain"
version = "0.1.0"
edition = "2021"

[dependencies]
# TUI framework
ratatui = "0.28"
crossterm = "0.28"

# Command execution
tokio = { version = "1.38", features = ["full"] }
anyhow = "1.0"

# Configuration and environment
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Utilities
chrono = "0.4"
